Fixed spacing and confirmation

--- a/public/scss/_mega-menu.scss
+++ b/public/scss/_mega-menu.scss
@@ -96,8 +96,8 @@
   font-family: Flaticon;
   border: none !important;
   font-size: 10px;
-  position: absolute;
-  right: -15px;
+  // position: absolute;
+  // right: -15px;
   top: 34%;
   color: inherit;
 }
